--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Me"]
 version = "0.1.0"
 
 [deps]
-Discord = "e67e5439-1494-44b2-b9ab-d191a16377ec"
+Discord = "fcbf000d-02fd-53f1-af91-d952191673d3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
